--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ At the bottom of the page, insert a link that will go back to the top of the pag
 </head>
 <body id="top">
     <!--<h1>Memphis, Tennessee</h1>-->
-    <a href="https://en.wikipedia.org/wiki/Memphis,_Tennessee"><h1>Memphis, Tennessee</h1></a>
-    <div id ="bluffcity"><h2><strong>Bluff City</strong></h2></div>
+    <header>><h1>Memphis, Tennessee</h1></header>
+    <div id ="bluffcity"><h2><strong><a href="https://en.wikipedia.org/wiki/Memphis,_Tennessee">Bluff City</a></strong></h2></div>
     <h3><em>From Wikipedia, the free encyclopedia</em></h3>
     <p class="bodySize">Memphis is a city located along the Mississippi River in southwestern Shelby County, Tennessee, United States. The 2017 city population was 652,236,[5] making Memphis the 25th largest city in the United States. Greater Memphis is the 42nd largest metropolitan area in the United States, with a population of 1,348,260 in 2017.[6] The city is the anchor of West Tennessee and the greater Mid-South region, which includes portions of neighboring Arkansas and Mississippi. Memphis is the seat of Shelby County, the most populous county in Tennessee. As one of the most historic and cultural cities of the southern United States, the city features a wide variety of landscapes and distinct neighborhoods.</p>
   <p class="bodySize">The first European explorer to visit the area of present-day Memphis was Spanish conquistador Hernando de Soto in 1541 with his expedition into the New World. The high bluffs protecting the location from the waters of the Mississippi would then be contested between the Spanish, French, and the English as Memphis took shape. Modern Memphis was founded in 1819 by three prominent Americans: John Overton, James Winchester, and future president Andrew Jackson.[7]</p>
